src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    ASSOCIACAO
    AT
    BEGIN
    BINNUMBER
    CLASS
    CLASSVAR
    CLASS_VAR
    DEFINE_BLOCO
    DOLAR_SIGN
    ENUM
    GLOBALVAR
    HEXNUMBER
    IN
    INCLUDE
    INSTANCEVAR
    INSTANCE_VAR
    LITERAL
    MACRO
    MODULO_ASSIGN
    NOT
    OCTNUMBER
    OF
    OR_ASSIGN
    OUT
    PASSA_ARGUMENTO
    POTENCIACAO_ASSIGN
    PRIVATE
    PROTECTED
    SAFE_CALL
    SCOPE
    SELECT
    SEMICOLON
    SHIFT_LEFT
    SHIFT_RIGHT
    SIZEOF
    STRUCT
    SYMBOL
    THEN
    TYPE
    TYPEOF
    UNINITIALIZED
    UNION
    VAR_GLOBAL
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> require_list constant_list module_list function_list
Rule 2     program -> require_list constant_list module_list
Rule 3     program -> require_list constant_list function_list
Rule 4     program -> require_list module_list function_list
Rule 5     program -> constant_list module_list function_list
Rule 6     program -> require_list constant_list
Rule 7     program -> require_list module_list
Rule 8     program -> constant_list module_list
Rule 9     program -> require_list function_list
Rule 10    program -> constant_list function_list
Rule 11    program -> module_list function_list
Rule 12    program -> require_list
Rule 13    program -> constant_list
Rule 14    program -> module_list
Rule 15    program -> function_list
Rule 16    require_list -> require require_list
Rule 17    require_list -> require
Rule 18    require -> REQUIRE STRING
Rule 19    constant_list -> constant constant_list
Rule 20    constant_list -> constant
Rule 21    constant -> CONSTANT ASSIGN expression
Rule 22    module_list -> module module_list
Rule 23    module_list -> module
Rule 24    module -> MODULE ID statements END
Rule 25    function_list -> function
Rule 26    function_list -> function function_list
Rule 27    function -> DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
Rule 28    function -> DEF ID opt_return_type NEWLINE statements END
Rule 29    opt_argument_list -> argument_list
Rule 30    opt_argument_list -> empty
Rule 31    argument_list -> argument
Rule 32    argument_list -> argument COMMA argument_list
Rule 33    argument -> ID
Rule 34    argument -> ID COLON types
Rule 35    argument -> ID ASSIGN expression
Rule 36    argument -> ID COLON types ASSIGN expression
Rule 37    opt_return_type -> COLON types
Rule 38    opt_return_type -> empty
Rule 39    types -> STRING
Rule 40    types -> CHAR
Rule 41    types -> NIL
Rule 42    types -> integer
Rule 43    types -> float
Rule 44    types -> boolean
Rule 45    integer -> INT
Rule 46    integer -> INT8
Rule 47    integer -> INT16
Rule 48    integer -> INT32
Rule 49    integer -> INT64
Rule 50    integer -> INT128
Rule 51    integer -> UINT8
Rule 52    integer -> UINT16
Rule 53    integer -> UINT32
Rule 54    integer -> UINT64
Rule 55    integer -> UINT128
Rule 56    float -> FLOAT
Rule 57    float -> FLOAT32
Rule 58    float -> FLOAT64
Rule 59    boolean -> BOOL
Rule 60    literal -> INTNUMBER
Rule 61    literal -> FLOATNUMBER
Rule 62    literal -> string_literal
Rule 63    literal -> CHAR
Rule 64    literal -> TRUE
Rule 65    literal -> FALSE
Rule 66    string_literal -> STRING
Rule 67    string_literal -> STRING INTERP_START expression INTERP_END string_literal
Rule 68    variable_declaration -> ID COLON types ASSIGN expression
Rule 69    variable_declaration -> ID ASSIGN expression
Rule 70    variable_declaration -> ID COMMA list_of_identifiers ASSIGN expression COMMA list_of_values
Rule 71    list_of_identifiers -> ID
Rule 72    list_of_identifiers -> ID COMMA list_of_identifiers
Rule 73    list_of_values -> expression
Rule 74    list_of_values -> expression COMMA list_of_values
Rule 75    function_call -> ID LPAREN expression_list RPAREN
Rule 76    function_call -> ID LPAREN RPAREN
Rule 77    opt_expression_list -> expression_list
Rule 78    opt_expression_list -> empty
Rule 79    expression_list -> expression
Rule 80    expression_list -> expression_list COMMA expression
Rule 81    statements -> statement
Rule 82    statements -> statement NEWLINE statements
Rule 83    statement -> expression
Rule 84    statement -> control_structure
Rule 85    statement -> variable_declaration
Rule 86    statement -> function_call
Rule 87    control_structure -> conditional
Rule 88    control_structure -> loop_structure
Rule 89    control_structure -> case_structure
Rule 90    control_structure -> return_statement
Rule 91    control_structure -> break_statement
Rule 92    control_structure -> next_statement
Rule 93    conditional -> if_statement
Rule 94    conditional -> unless_statement
Rule 95    if_statement -> IF if_condition statements opt_elsif opt_else END
Rule 96    unless_statement -> UNLESS if_condition statements opt_else END
Rule 97    if_condition -> expression
Rule 98    if_condition -> expression LBRACE statements RBRACE
Rule 99    opt_elsif -> elsif_list
Rule 100   opt_elsif -> empty
Rule 101   elsif_list -> elsif_list elsif
Rule 102   elsif_list -> elsif
Rule 103   elsif -> ELSIF if_condition statements
Rule 104   opt_else -> ELSE statements
Rule 105   opt_else -> empty
Rule 106   loop_structure -> while
Rule 107   loop_structure -> until
Rule 108   loop_structure -> loop
Rule 109   loop_structure -> iterator
Rule 110   while -> WHILE expression statements
Rule 111   until -> UNTIL expression statements
Rule 112   loop -> LOOP statements
Rule 113   iterator -> expression DOT MULTI statements
Rule 114   iterator -> expression DOT EACH DO PIPE ID PIPE statements END
Rule 115   iterator -> expression DOT EACH LBRACE PIPE ID PIPE RBRACE statements
Rule 116   case_structure -> CASE expression when_list opt_else END
Rule 117   when_list -> WHEN expression statements
Rule 118   when_list -> when_list WHEN expression statements
Rule 119   return_statement -> RETURN opt_expression
Rule 120   break_statement -> BREAK opt_expression
Rule 121   next_statement -> NEXT opt_expression
Rule 122   opt_expression -> expression
Rule 123   opt_expression -> empty
Rule 124   expression -> assignment_expression
Rule 125   assignment_expression -> assignment_target ASSIGN expression
Rule 126   assignment_expression -> assignment_target PLUS_ASSIGN expression
Rule 127   assignment_expression -> assignment_target MINUS_ASSIGN expression
Rule 128   assignment_expression -> assignment_target MULTI_ASSIGN expression
Rule 129   assignment_expression -> assignment_target DIVIDE_ASSIGN expression
Rule 130   assignment_expression -> ternary_expression
Rule 131   assignment_target -> ID
Rule 132   assignment_target -> ID LBRACKET expression RBRACKET
Rule 133   assignment_target -> UNDERSCORE
Rule 134   assignment_target -> ASTERISK assignment_target
Rule 135   ternary_expression -> range_expression QMARK expression TCOLON expression
Rule 136   ternary_expression -> range_expression
Rule 137   range_expression -> logical_or_expression DOTDOT logical_or_expression
Rule 138   range_expression -> logical_or_expression DOTDOTDOT logical_or_expression
Rule 139   range_expression -> logical_or_expression
Rule 140   logical_or_expression -> logical_and_expression
Rule 141   logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 142   logical_and_expression -> equality_expression
Rule 143   logical_and_expression -> logical_and_expression AND equality_expression
Rule 144   equality_expression -> relational_expression
Rule 145   equality_expression -> equality_expression EQUAL relational_expression
Rule 146   equality_expression -> equality_expression NOT_EQUAL relational_expression
Rule 147   equality_expression -> equality_expression TIPO_EQUAL relational_expression
Rule 148   relational_expression -> additive_expression
Rule 149   relational_expression -> relational_expression GREATER_THAN additive_expression
Rule 150   relational_expression -> relational_expression LESS_THAN additive_expression
Rule 151   relational_expression -> relational_expression GREATER_EQUAL additive_expression
Rule 152   relational_expression -> relational_expression LESS_EQUAL additive_expression
Rule 153   additive_expression -> multiplicative_expression
Rule 154   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 155   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 156   multiplicative_expression -> potenciacao_expression
Rule 157   multiplicative_expression -> multiplicative_expression MULTI potenciacao_expression
Rule 158   multiplicative_expression -> multiplicative_expression DIVIDE potenciacao_expression
Rule 159   multiplicative_expression -> multiplicative_expression MODULO potenciacao_expression
Rule 160   potenciacao_expression -> unary_expression
Rule 161   potenciacao_expression -> potenciacao_expression POTENCIACAO unary_expression
Rule 162   unary_expression -> PLUS unary_expression
Rule 163   unary_expression -> MINUS unary_expression
Rule 164   unary_expression -> EXCLAMATION unary_expression
Rule 165   unary_expression -> TILDE unary_expression
Rule 166   unary_expression -> primary_expression
Rule 167   primary_expression -> LPAREN expression RPAREN
Rule 168   primary_expression -> array_literal
Rule 169   primary_expression -> literal
Rule 170   array_literal -> LBRACKET opt_expression_list RBRACKET
Rule 171   empty -> <empty>

Terminals, with rules where they appear

AND                  : 143
AS                   : 
ASSIGN               : 21 35 36 68 69 70 125
ASSOCIACAO           : 
ASTERISK             : 134
AT                   : 
BEGIN                : 
BINNUMBER            : 
BOOL                 : 59
BREAK                : 120
CASE                 : 116
CHAR                 : 40 63
CLASS                : 
CLASSVAR             : 
CLASS_VAR            : 
COLON                : 34 36 37 68
COMMA                : 32 70 70 72 74 80
CONSTANT             : 21
DEF                  : 27 28
DEFINE_BLOCO         : 
DIVIDE               : 158
DIVIDE_ASSIGN        : 129
DO                   : 114
DOLAR_SIGN           : 
DOT                  : 113 114 115
DOTDOT               : 137
DOTDOTDOT            : 138
EACH                 : 114 115
ELSE                 : 104
ELSIF                : 103
END                  : 24 27 28 95 96 114 116
ENUM                 : 
EQUAL                : 145
EXCLAMATION          : 164
FALSE                : 65
FLOAT                : 56
FLOAT32              : 57
FLOAT64              : 58
FLOATNUMBER          : 61
GLOBALVAR            : 
GREATER_EQUAL        : 151
GREATER_THAN         : 149
HEXNUMBER            : 
ID                   : 24 27 28 33 34 35 36 68 69 70 71 72 75 76 114 115 131 132
IF                   : 95
IN                   : 
INCLUDE              : 
INSTANCEVAR          : 
INSTANCE_VAR         : 
INT                  : 45
INT128               : 50
INT16                : 47
INT32                : 48
INT64                : 49
INT8                 : 46
INTERP_END           : 67
INTERP_START         : 67
INTNUMBER            : 60
LBRACE               : 98 115
LBRACKET             : 132 170
LESS_EQUAL           : 152
LESS_THAN            : 150
LITERAL              : 
LOOP                 : 112
LPAREN               : 27 75 76 167
MACRO                : 
MINUS                : 155 163
MINUS_ASSIGN         : 127
MODULE               : 24
MODULO               : 159
MODULO_ASSIGN        : 
MULTI                : 113 157
MULTI_ASSIGN         : 128
NEWLINE              : 28 82
NEXT                 : 121
NIL                  : 41
NOT                  : 
NOT_EQUAL            : 146
OCTNUMBER            : 
OF                   : 
OR                   : 141
OR_ASSIGN            : 
OUT                  : 
PASSA_ARGUMENTO      : 
PIPE                 : 114 114 115 115
PLUS                 : 154 162
PLUS_ASSIGN          : 126
POTENCIACAO          : 161
POTENCIACAO_ASSIGN   : 
PRIVATE              : 
PROTECTED            : 
QMARK                : 135
RBRACE               : 98 115
RBRACKET             : 132 170
REQUIRE              : 18
RETURN               : 119
RPAREN               : 27 75 76 167
SAFE_CALL            : 
SCOPE                : 
SELECT               : 
SEMICOLON            : 
SHIFT_LEFT           : 
SHIFT_RIGHT          : 
SIZEOF               : 
STRING               : 18 39 66 67
STRUCT               : 
SYMBOL               : 
TCOLON               : 135
THEN                 : 
TILDE                : 165
TIPO_EQUAL           : 147
TRUE                 : 64
TYPE                 : 
TYPEOF               : 
UINT128              : 55
UINT16               : 52
UINT32               : 53
UINT64               : 54
UINT8                : 51
UNDERSCORE           : 133
UNINITIALIZED        : 
UNION                : 
UNLESS               : 96
UNTIL                : 111
VAR_GLOBAL           : 
WHEN                 : 117 118
WHILE                : 110
YIELD                : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 148 149 150 151 152 154 155
argument             : 31 32
argument_list        : 29 32
array_literal        : 168
assignment_expression : 124
assignment_target    : 125 126 127 128 129 134
boolean              : 44
break_statement      : 91
case_structure       : 89
conditional          : 87
constant             : 19 20
constant_list        : 1 2 3 5 6 8 10 13 19
control_structure    : 84
elsif                : 101 102
elsif_list           : 99 101
empty                : 30 38 78 100 105 123
equality_expression  : 142 143 145 146 147
expression           : 21 35 36 67 68 69 70 73 74 79 80 83 97 98 110 111 113 114 115 116 117 118 122 125 126 127 128 129 132 135 135 167
expression_list      : 75 77 80
float                : 43
function             : 25 26
function_call        : 86
function_list        : 1 3 4 5 9 10 11 15 26
if_condition         : 95 96 103
if_statement         : 93
integer              : 42
iterator             : 109
list_of_identifiers  : 70 72
list_of_values       : 70 74
literal              : 169
logical_and_expression : 140 141 143
logical_or_expression : 137 137 138 138 139 141
loop                 : 108
loop_structure       : 88
module               : 22 23
module_list          : 1 2 4 5 7 8 11 14 22
multiplicative_expression : 153 154 155 157 158 159
next_statement       : 92
opt_argument_list    : 27
opt_else             : 95 96 116
opt_elsif            : 95
opt_expression       : 119 120 121
opt_expression_list  : 170
opt_return_type      : 27 28
potenciacao_expression : 156 157 158 159 161
primary_expression   : 166
program              : 0
range_expression     : 135 136
relational_expression : 144 145 146 147 149 150 151 152
require              : 16 17
require_list         : 1 2 3 4 6 7 9 12 16
return_statement     : 90
statement            : 81 82
statements           : 24 27 28 82 95 96 98 103 104 110 111 112 113 114 115 117 118
string_literal       : 62 67
ternary_expression   : 130
types                : 34 36 37 68
unary_expression     : 160 161 162 163 164 165
unless_statement     : 94
until                : 107
variable_declaration : 85
when_list            : 116 118
while                : 106

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . require_list constant_list module_list function_list
    (2) program -> . require_list constant_list module_list
    (3) program -> . require_list constant_list function_list
    (4) program -> . require_list module_list function_list
    (5) program -> . constant_list module_list function_list
    (6) program -> . require_list constant_list
    (7) program -> . require_list module_list
    (8) program -> . constant_list module_list
    (9) program -> . require_list function_list
    (10) program -> . constant_list function_list
    (11) program -> . module_list function_list
    (12) program -> . require_list
    (13) program -> . constant_list
    (14) program -> . module_list
    (15) program -> . function_list
    (16) require_list -> . require require_list
    (17) require_list -> . require
    (19) constant_list -> . constant constant_list
    (20) constant_list -> . constant
    (22) module_list -> . module module_list
    (23) module_list -> . module
    (25) function_list -> . function
    (26) function_list -> . function function_list
    (18) require -> . REQUIRE STRING
    (21) constant -> . CONSTANT ASSIGN expression
    (24) module -> . MODULE ID statements END
    (27) function -> . DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> . DEF ID opt_return_type NEWLINE statements END

    REQUIRE         shift and go to state 10
    CONSTANT        shift and go to state 11
    MODULE          shift and go to state 12
    DEF             shift and go to state 13

    program                        shift and go to state 1
    require_list                   shift and go to state 2
    constant_list                  shift and go to state 3
    module_list                    shift and go to state 4
    function_list                  shift and go to state 5
    require                        shift and go to state 6
    constant                       shift and go to state 7
    module                         shift and go to state 8
    function                       shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> require_list . constant_list module_list function_list
    (2) program -> require_list . constant_list module_list
    (3) program -> require_list . constant_list function_list
    (4) program -> require_list . module_list function_list
    (6) program -> require_list . constant_list
    (7) program -> require_list . module_list
    (9) program -> require_list . function_list
    (12) program -> require_list .
    (19) constant_list -> . constant constant_list
    (20) constant_list -> . constant
    (22) module_list -> . module module_list
    (23) module_list -> . module
    (25) function_list -> . function
    (26) function_list -> . function function_list
    (21) constant -> . CONSTANT ASSIGN expression
    (24) module -> . MODULE ID statements END
    (27) function -> . DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> . DEF ID opt_return_type NEWLINE statements END

    $end            reduce using rule 12 (program -> require_list .)
    CONSTANT        shift and go to state 11
    MODULE          shift and go to state 12
    DEF             shift and go to state 13

    constant_list                  shift and go to state 14
    module_list                    shift and go to state 15
    function_list                  shift and go to state 16
    constant                       shift and go to state 7
    module                         shift and go to state 8
    function                       shift and go to state 9

state 3

    (5) program -> constant_list . module_list function_list
    (8) program -> constant_list . module_list
    (10) program -> constant_list . function_list
    (13) program -> constant_list .
    (22) module_list -> . module module_list
    (23) module_list -> . module
    (25) function_list -> . function
    (26) function_list -> . function function_list
    (24) module -> . MODULE ID statements END
    (27) function -> . DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> . DEF ID opt_return_type NEWLINE statements END

    $end            reduce using rule 13 (program -> constant_list .)
    MODULE          shift and go to state 12
    DEF             shift and go to state 13

    module_list                    shift and go to state 17
    function_list                  shift and go to state 18
    module                         shift and go to state 8
    function                       shift and go to state 9

state 4

    (11) program -> module_list . function_list
    (14) program -> module_list .
    (25) function_list -> . function
    (26) function_list -> . function function_list
    (27) function -> . DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> . DEF ID opt_return_type NEWLINE statements END

    $end            reduce using rule 14 (program -> module_list .)
    DEF             shift and go to state 13

    function_list                  shift and go to state 19
    function                       shift and go to state 9

state 5

    (15) program -> function_list .

    $end            reduce using rule 15 (program -> function_list .)


state 6

    (16) require_list -> require . require_list
    (17) require_list -> require .
    (16) require_list -> . require require_list
    (17) require_list -> . require
    (18) require -> . REQUIRE STRING

    CONSTANT        reduce using rule 17 (require_list -> require .)
    MODULE          reduce using rule 17 (require_list -> require .)
    DEF             reduce using rule 17 (require_list -> require .)
    $end            reduce using rule 17 (require_list -> require .)
    REQUIRE         shift and go to state 10

    require                        shift and go to state 6
    require_list                   shift and go to state 20

state 7

    (19) constant_list -> constant . constant_list
    (20) constant_list -> constant .
    (19) constant_list -> . constant constant_list
    (20) constant_list -> . constant
    (21) constant -> . CONSTANT ASSIGN expression

    MODULE          reduce using rule 20 (constant_list -> constant .)
    DEF             reduce using rule 20 (constant_list -> constant .)
    $end            reduce using rule 20 (constant_list -> constant .)
    CONSTANT        shift and go to state 11

    constant                       shift and go to state 7
    constant_list                  shift and go to state 21

state 8

    (22) module_list -> module . module_list
    (23) module_list -> module .
    (22) module_list -> . module module_list
    (23) module_list -> . module
    (24) module -> . MODULE ID statements END

    DEF             reduce using rule 23 (module_list -> module .)
    $end            reduce using rule 23 (module_list -> module .)
    MODULE          shift and go to state 12

    module                         shift and go to state 8
    module_list                    shift and go to state 22

state 9

    (25) function_list -> function .
    (26) function_list -> function . function_list
    (25) function_list -> . function
    (26) function_list -> . function function_list
    (27) function -> . DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> . DEF ID opt_return_type NEWLINE statements END

    $end            reduce using rule 25 (function_list -> function .)
    DEF             shift and go to state 13

    function                       shift and go to state 9
    function_list                  shift and go to state 23

state 10

    (18) require -> REQUIRE . STRING

    STRING          shift and go to state 24


state 11

    (21) constant -> CONSTANT . ASSIGN expression

    ASSIGN          shift and go to state 25


state 12

    (24) module -> MODULE . ID statements END

    ID              shift and go to state 26


state 13

    (27) function -> DEF . ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> DEF . ID opt_return_type NEWLINE statements END

    ID              shift and go to state 27


state 14

    (1) program -> require_list constant_list . module_list function_list
    (2) program -> require_list constant_list . module_list
    (3) program -> require_list constant_list . function_list
    (6) program -> require_list constant_list .
    (22) module_list -> . module module_list
    (23) module_list -> . module
    (25) function_list -> . function
    (26) function_list -> . function function_list
    (24) module -> . MODULE ID statements END
    (27) function -> . DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> . DEF ID opt_return_type NEWLINE statements END

    $end            reduce using rule 6 (program -> require_list constant_list .)
    MODULE          shift and go to state 12
    DEF             shift and go to state 13

    module_list                    shift and go to state 28
    function_list                  shift and go to state 29
    module                         shift and go to state 8
    function                       shift and go to state 9

state 15

    (4) program -> require_list module_list . function_list
    (7) program -> require_list module_list .
    (25) function_list -> . function
    (26) function_list -> . function function_list
    (27) function -> . DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> . DEF ID opt_return_type NEWLINE statements END

    $end            reduce using rule 7 (program -> require_list module_list .)
    DEF             shift and go to state 13

    function_list                  shift and go to state 30
    function                       shift and go to state 9

state 16

    (9) program -> require_list function_list .

    $end            reduce using rule 9 (program -> require_list function_list .)


state 17

    (5) program -> constant_list module_list . function_list
    (8) program -> constant_list module_list .
    (25) function_list -> . function
    (26) function_list -> . function function_list
    (27) function -> . DEF ID LPAREN opt_argument_list RPAREN opt_return_type statements END
    (28) function -> . DEF ID opt_return_type NEWLINE statements END

    $end            reduce using rule 8 (program -> constant_list module_list .)
    DEF             shift and go to state 13

    function_list                  shift and go to state 31
    function                       shift and go to state 9

state 18

    (10) program -> constant_list function_list .

    $end            reduce using rule 10 (program -> constant_list function_list .)


state 19

    (11) program -> module_list function_list .

    $end            reduce using rule 11 (program -> module_list function_list .)


state 20

    (16) require_list -> require require_list .

    CONSTANT        reduce using rule 16 (require_list -> require require_list .)
    MODULE          reduce using rule 16 (require_list -> require require_list .)
    DEF             reduce using rule 16 (require_list -> require require_list .)
    $end            reduce using rule 16 (require_list -> require require_list .)


state 21

    (19) constant_list -> constant constant_list .
